k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kvltech-prod
  labels:
    app: kvltech
    environment: production
