k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvltech-service
  namespace: kvltech-prod
  labels:
    app: kvltech
spec:
  type: ClusterIP
  selector:
    app: kvltech
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
